added changes  for notifications

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,16 @@ response_userinvalid={"msg": "Username Invalid", "statusCode" : 400}
 response_userexists={"msg": "This Username already exist", statusCode: 406}
 
 
+#REST JSON Response Messages Drama
+response_dramaempty={"msg":"Drama Not Found", "statusCode" : 404}
+response_dramaexists={"msg": "This Drama already exist", statusCode: 406}
+
+#REST JSON Response Messages Auditorium
+response_auditoriumempty={"msg":"Auditorium Not Found", "statusCode" : 404}
+
+#REST JSON Response Messages Rating
+response_ratingsuccess={"msg":"Thank You for Rating....", "statusCode" : 201}
+
 #Exception Messages
 exception_userinvalid=Username Invalid
 exception_userempty=User Not Found
