--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,5 @@ response_userexists={"msg": "This Username already exist", statusCode: 406}
 #Exception Messages
 exception_userinvalid=Username Invalid
 exception_userempty=User Not Found
+exception_allgroups=Error: Groups retrival issue from database
+
