--- a/src/main/resources/sql.properties
+++ b/src/main/resources/sql.properties
@@ -12,12 +12,12 @@ update_users=update users set realname= :realname, phone= :phone, state= :state,
 
 #GROUP_QUERIES 
 select_groups_all=select * from groups
-insert_groups=insert into groups (id, group_name) values (:id, :group_name)
-insert_user_groups=insert into users_groups(users_id, groups_id) values (:users_id, (select id from groups where group_name= :group_name))
 select_groupname_byuserid=select group_name from groups join users_groups on groups.id = users_groups.groups_id where users_groups.users_id= :users_id
+select_usersbygroups=select users.id as usersId, realname, username, auth_id, phone, provenance, birthdate, enabled, notification, device, address, city, state, zipcode, groups.id as groupsId, group_name from users join users_groups on users.id = users_groups.users_id join groups on users_groups.groups_id = groups.id where groups.group_name= :group_name
+select_usersgroups_all=select users.id as usersId, realname, username, auth_id, phone, provenance, birthdate, enabled, notification, device, address, city, state, zipcode, groups.id as groupsId, group_name, is_subgroup,  parent_id from users join users_groups on users.id = users_groups.users_id join groups on users_groups.groups_id = groups.id
+insert_groups=insert into groups (id, group_name, is_subgroup, parent_id) values (:id, :group_name, is_subgroup, parent_id)
+insert_user_groups=insert into users_groups(users_id, groups_id) values (:users_id, (select id from groups where group_name= :group_name))
 select_id_bygroupname=select id from groups where group_name= :group_name
-select_usersbygroups=select users.id as usersId, realname, username, auth_id, phone, provenance, birthdate, enabled, notification, device, address, city, state, zipcode,  groups.id as groupsId, group_name  from users join users_groups on users.id = users_groups.users_id join groups on users_groups.groups_id = groups.id where groups.group_name= :group_name
-select_usersgroups_all=select users.id as usersId, realname, username, auth_id, phone, provenance, birthdate, enabled, notification, device, address, city, state, zipcode, groups.id as groupsId, group_name  from users join users_groups on users.id = users_groups.users_id join groups on users_groups.groups_id = groups.id
 select_groups_exists=SELECT count(group_name) FROM groups WHERE group_name= :group_name
 insert_dramas_groups=insert into dramas_groups(dramas_id, groups_id) values (:dramas_id, (select id from groups where group_name= :group_name))
 update_group_byuser=update users inner join users_groups on users_groups.users_id = users.id set users_groups.groups_id = (select id from groups where group_name= :group_name) where users.username= :username
