please check booking.sql made changes and added new DAO for booking

--- a/src/main/resources/sql.properties
+++ b/src/main/resources/sql.properties
@@ -87,6 +87,10 @@ update_devices=update devices set deviceToken= :deviceToken  WHERE users_id= :us
 
 
 
+#BOOKING_QUERIES QUERIES
+insert_booking=insert into booking(id, booking_date, confirmation_no, users_id,booking_seatcount,dramas_auditoriums_id) values (:id, :booking_date, :confirmation_no, :users_id, :booking_seatcount, :dramas_auditoriums_id)
+
+select_booking_all=select * from booking
 
 
 
