Doing Junit Testing

--- a/src/main/resources/sql.properties
+++ b/src/main/resources/sql.properties
@@ -63,7 +63,7 @@ select_ratings_exists=SELECT count(id) FROM ratings WHERE users_id= :users_id an
 insert_ratings=insert into ratings (id,rating,rating_date,users_id,dramas_id) values (:id,:rating,:rating_date,:users_id,:dramas_id)
 select_users_id_and_dramas_id=select * from ratings where users_id=:users_id and dramas_id=:dramas_id
 update_ratings=update ratings set rating= :rating, rating_date= :rating_date, users_id= :users_id , dramas_id= :dramas_id WHERE id= :id
-
+select_all_ratings=select id,rating,rating_date,users_id,dramas_id from ratings
 
 
 #NOTIFICATION_QUERIES
@@ -80,22 +80,18 @@ insert_rowseat=insert into row_seat(row_num, row_name, seat_num, auditoriums_id)
 
 
 #DEVICE_QUERIES
-insert_user_devices=insert into devices(users_id,deviceToken) values (:users_id,:deviceToken)
-select_devices_exists=select  count(deviceToken) from devices where deviceToken=:deviceToken
+insert_user_devices=insert into devices(id,users_id,deviceToken) values (:id,:users_id,:deviceToken)
+select_devices_exists=select  count(users_id) from devices where users_id=:users_id
 select_all_devices=select * from devices
 update_devices=update devices set deviceToken= :deviceToken  WHERE users_id= :users_id
-
-
+select_device_by_id=select * from devices join users on devices.users_id=users.id  where users.id=:users_id
+delete_device= delete from devices where users_id=:users_id
 
 #BOOKING_QUERIES QUERIES
 insert_booking=insert into booking(id, booking_date, confirmation_no, users_id,booking_seatcount,dramas_auditoriums_id) values (:id, :booking_date, :confirmation_no, :users_id, :booking_seatcount, :dramas_auditoriums_id)
-
-select_booking_all=select * from booking
-
-
-
-
-
+delete_booking_by_Id=DELETE FROM booking WHERE id= :id
+select_booking_all=select id, booking_date, confirmation_no, users_id,booking_seatcount,dramas_auditoriums_id from booking
+select_booking_by_users_id=SELECT * FROM booking join users on booking.users_id=users.id  WHERE users.id = :users_id
 
 
 
