Tested with Transaction and commit annotation

--- a/src/main/resources/sql.properties
+++ b/src/main/resources/sql.properties
@@ -81,7 +81,7 @@ insert_rowseat=insert into row_seat(row_num, row_name, seat_num, auditoriums_id)
 
 #DEVICE_QUERIES
 insert_user_devices=insert into devices(id,users_id,deviceToken) values (:id,:users_id,:deviceToken)
-select_devices_exists=select  count(users_id) from devices where users_id=:users_id
+select_devices_exists=select  count(users_id) from devices join users on devices.users_id=users.id  where users.id =:users_id
 select_all_devices=select * from devices
 update_devices=update devices set deviceToken= :deviceToken  WHERE users_id= :users_id
 select_device_by_id=select * from devices join users on devices.users_id=users.id  where users.id=:users_id
