Corrected DAO as perdiscussion  and working in service layer

--- a/src/main/resources/sql.properties
+++ b/src/main/resources/sql.properties
@@ -88,10 +88,18 @@ select_device_by_id=select * from devices join users on devices.users_id=users.i
 delete_device= delete from devices where users_id=:users_id
 
 #BOOKING_QUERIES QUERIES
-insert_booking=insert into booking(id, booking_date, confirmation_no, users_id,booking_seatcount,dramas_auditoriums_id) values (:id, :booking_date, :confirmation_no, :users_id, :booking_seatcount, :dramas_auditoriums_id)
+insert_booking=insert into booking(id, booking_date, confirmation_no, users_id,dramas_id,auditorium_id,price,status) values (:id, :booking_date, :confirmation_no, :users_id, :dramas_id, :auditorium_id, :price, :status)
 delete_booking_by_Id=DELETE FROM booking WHERE id= :id
-select_booking_all=select id, booking_date, confirmation_no, users_id,booking_seatcount,dramas_auditoriums_id from booking
+select_booking_all=select booking_date, confirmation_no, users_id,dramas_id,auditoriums_id,auditoriums.auditorium_name, price,status ,dramas.title,dramas.date from booking join dramas on  booking.dramas_id=dramas.id join auditoriums on booking.auditoriums_id= auditoriums.id
 select_booking_by_users_id=SELECT * FROM booking join users on booking.users_id=users.id  WHERE users.id = :users_id
+
+
+
+
+#BOOKEDSEATS_QUERIES QUERIES
+insert_bookedseats=insert into booking(id, booking_id, row_seats_id, refer_seat_id) values (:id, :booking_id, :row_seats_id, :refer_seat_id)
+
+
 
 
 
