done booked seats and booking seats rest api. Pending testing and resolved device bug in userservice

--- a/src/main/resources/sql.properties
+++ b/src/main/resources/sql.properties
@@ -75,12 +75,14 @@ delete_notification_by_id=DELETE FROM notifications WHERE id= :id order by id AS
 
 #ROW_SEAT QUERIES
 insert_rowseat=insert into row_seat(row_num, row_name, seat_num, auditoriums_id) values (:row_num, :row_name, :seat_num, :auditoriums_id)
+select_rowseat_all=select * from row_seat
+delete_by_id= delete from row_seat where id=:id
+select_rowseat_by_auditoriums_id=select * from row_seat join auditoriums on row_seat.auditoriums_id=auditoriums.id  where auditoriums.id=:auditoriums_id
+get_select_id=select id from row_seat where seat_num=:seat_num and row_name=:row_name and auditoriums_id=:auditoriums_id
 
-
-
-
+ 
 #DEVICE_QUERIES
-insert_user_devices=insert into devices(id,users_id,deviceToken) values (:id,:users_id,:deviceToken)
+insert_user_devices=insert into devices(users_id,deviceToken) values (:users_id,:deviceToken)
 select_devices_exists=select  count(users_id) from devices join users on devices.users_id=users.id  where users.id =:users_id
 select_all_devices=select * from devices
 update_devices=update devices set deviceToken= :deviceToken  WHERE users_id= :users_id
@@ -88,7 +90,7 @@ select_device_by_id=select * from devices join users on devices.users_id=users.i
 delete_device= delete from devices where users_id=:users_id
 
 #BOOKING_QUERIES QUERIES
-insert_booking=insert into booking(id, booking_date, confirmation_no, users_id,dramas_id,auditorium_id,price,status) values (:id, :booking_date, :confirmation_no, :users_id, :dramas_id, :auditorium_id, :price, :status)
+insert_booking=insert into booking(id, booking_date, confirmation_no, users_id,dramas_id,auditoriums_id,price,status) values (:id, :booking_date, :confirmation_no, :users_id, :dramas_id, :auditoriums_id, :price, :status)
 delete_booking_by_Id=DELETE FROM booking WHERE id= :id
 select_booking_all=select booking_date, confirmation_no, users_id,dramas_id,auditoriums_id,auditoriums.auditorium_name, price,status ,dramas.title,dramas.date from booking join dramas on  booking.dramas_id=dramas.id join auditoriums on booking.auditoriums_id= auditoriums.id
 select_booking_by_users_id=SELECT * FROM booking join users on booking.users_id=users.id  WHERE users.id = :users_id
@@ -97,8 +99,9 @@ select_booking_by_users_id=SELECT * FROM booking join users on booking.users_id=
 
 
 #BOOKEDSEATS_QUERIES QUERIES
-insert_bookedseats=insert into booking(id, booking_id, row_seats_id, refer_seat_id) values (:id, :booking_id, :row_seats_id, :refer_seat_id)
-
+insert_bookedseats=insert into booked_seats(id, booking_id, row_seats_id, seat_status) values (:id, :booking_id, :row_seats_id, :seat_status)
+delete_bookedseats_by_Id=DELETE FROM booked_seats WHERE id= :id
+select_booked_seats=select row_seat.row_num,row_seat.seat_num,booking.status from booking join booked_seats on booking.id=booked_seats.booking_id join row_seat on booked_seats.row_seats_id=row_seat.id where booking.auditoriums_id= :auditoriums_id and booking.dramas_id= :dramas_id and now()< booking.booking_date;
 
 
 
