bug resolved in drama rest api and booking notification is pending

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,6 +22,11 @@ response_auditoriumempty={"msg":"Auditorium Not Found", "statusCode" : 404}
 #REST JSON Response Messages Rating
 response_ratingsuccess={"msg":"Thank You for Rating....", "statusCode" : 201}
 
+
+#REST JSON Response Messages Booking
+response_bookingmempty={"msg":"Booking failed ", "statusCode" : 404}
+
+
 #Exception Messages
 exception_userinvalid=Username Invalid
 exception_userempty=User Not Found
