--- a/src/main/resources/sql.properties
+++ b/src/main/resources/sql.properties
@@ -55,8 +55,8 @@ select_new_audi_price_time=select distinct auditoriums_price.auditoriums_id, aud
  
 #DRAMA_GROUP_QUERIES 
 select_groupname_bydramaid=select group_name from groups join dramas_groups on groups.id = dramas_groups.id where dramas_groups.dramas_id= :drama_id
-select_dramasbygroups=select dramas.id as dramasId,title,imageurl, groups.id as groupsId, group_name  from dramas join dramas_groups on dramas.id = dramas_groups.dramas_id join groups on dramas_groups.groups_id = groups.id where groups.group_name= :group_name
-select_dramasgroups_all=select dramas.id as dramasId,title,imageurl, groups.id as groupsId, group_name  from dramas join dramas_groups on dramas.id = dramas_groups.dramas_id join groups on dramas_groups.groups_id = groups.id 
+select_dramasbygroups=select dramas.id as dramasId,title,date,imageurl, groups.id as groupsId, group_name  from dramas join dramas_groups on dramas.id = dramas_groups.dramas_id join groups on dramas_groups.groups_id = groups.id where groups.group_name= :group_name
+select_dramasgroups_all=select dramas.id as dramasId,title,date,imageurl, groups.id as groupsId, group_name  from dramas join dramas_groups on dramas.id = dramas_groups.dramas_id join groups on dramas_groups.groups_id = groups.id 
 
 #RATING_QUERY
 select_ratings_exists=SELECT count(id) FROM ratings WHERE users_id= :users_id and dramas_id= :dramas_id
