changes in  getuser api added device id too  in the same api

--- a/src/main/resources/sql.properties
+++ b/src/main/resources/sql.properties
@@ -8,7 +8,8 @@ delete_users_email=DELETE FROM USERS WHERE username= :emailID
 select_users_exists=SELECT count(username) FROM users WHERE username= :username
 select_users_id=SELECT * FROM users WHERE id= :id
 select_users_username=SELECT * FROM users WHERE username= :username
-update_users=update users set realname= :realname, phone= :phone, state= :state, city= :city,  zipcode= :zipcode, address= :address, notification= :notification, enabled= :enabled where username= :username
+update_users=update users set realname= :realname, phone= :phone, state= :state, city= :city, device= :device, zipcode= :zipcode, address= :address, notification= :notification, enabled= :enabled where username= :username
+update_users_device=update users set device= :device where username= :username
 
 #GROUP_QUERIES 
 select_groups_all=select * from groups
