--- a/src/main/resources/sql.properties
+++ b/src/main/resources/sql.properties
@@ -52,7 +52,7 @@ select_auditorium_id_byname=select id from auditoriums where auditorium_name =:a
 
 
 select_new_name_id_auditorium_by_dramaId=select auditorium_name, auditoriums.id,dramas_auditoriums.date,dramas_auditoriums.time from auditoriums join dramas_auditoriums on auditoriums.id= dramas_auditoriums.auditoriums_id where dramas_auditoriums.dramas_id=:dramas_id and dramas_auditoriums.date=:date
-select_new_audi_price_time=select distinct auditoriums_price.auditoriums_id, auditoriums_price.price, auditoriums_price.istart, auditoriums_price.iend from auditoriums_price join dramas_auditoriums on auditoriums_price.auditoriums_id=dramas_auditoriums.auditoriums_id where auditoriums_price.auditoriums_id=:id and auditoriums_price.dramas_id=:dramas_id;
+select_new_audi_price_time=select distinct auditoriums_price.auditoriums_id, auditoriums_price.price, auditoriums_price.istart, auditoriums_price.iend from auditoriums_price join dramas_auditoriums on auditoriums_price.auditoriums_id=dramas_auditoriums.auditoriums_id where auditoriums_price.auditoriums_id=:id and auditoriums_price.dramas_id=:dramas_id and dramas_auditoriums.date=:date;
  
 #DRAMA_GROUP_QUERIES 
 select_groupname_bydramaid=select group_name from groups join dramas_groups on groups.id = dramas_groups.id where dramas_groups.dramas_id= :drama_id
