--- a/src/main/resources/sql.properties
+++ b/src/main/resources/sql.properties
@@ -1,7 +1,7 @@
 ######SQL QUERIES########
 
 #USER_QUERIES
-insert_users=insert into users (id, auth_id, username, realname, phone, state, city, device, zipcode, address, provenance, birthdate) values (:id, :auth_id, :username, :realname, :phone, :state, :city, :device, :zipcode, :address, :provenance, :birthdate)
+insert_users=insert into users (auth_id, username, realname, phone, state, city, device, zipcode, address, provenance, birthdate) values (:auth_id, :username, :realname, :phone, :state, :city, :device, :zipcode, :address, :provenance, :birthdate)
 select_users=SELECT * FROM users
 delete_users=DELETE FROM USERS WHERE id= :id
 delete_users_email=DELETE FROM USERS WHERE username= :emailID
@@ -21,6 +21,9 @@ select_id_bygroupname=select id from groups where group_name= :group_name
 select_groups_exists=SELECT count(group_name) FROM groups WHERE group_name= :group_name
 insert_dramas_groups=insert into dramas_groups(dramas_id, groups_id) values (:dramas_id, (select id from groups where group_name= :group_name))
 update_group_byuser=update users inner join users_groups on users_groups.users_id = users.id set users_groups.groups_id = (select id from groups where group_name= :group_name) where users.username= :username
+select_count_groups=select count(*) from groups where parent_id=0
+delete_groups=delete from groups where group_name= :group_name
+select_has_subgroup=select count(*) from groups where parent_id IN (select id from groups where group_name= :group_name)
 
 
 #ROLE_QUERIES 
@@ -31,7 +34,7 @@ select_role_byuserid=select role from roles join users_roles on roles.id = users
 update_roles_byuser=update users inner join users_roles on users_roles.users_id = users.id  set users_roles.roles_id = (select id from roles where role= :role) where users.username= :username
 
 #DRAMA_QUERIES
-insert_dramas=insert into dramas (id,title,imageurl, drama_length, date, genre, star_cast, description, director, writer, music, avg_rating,drama_language) values (:id,:title,:imageurl, :drama_length, :date, :genre, :star_cast, :description, :director, :writer, :music, :avg_rating, :drama_language)
+insert_dramas=insert into dramas (title,imageurl, drama_length, date, genre, star_cast, description, director, writer, music, avg_rating,drama_language) values (:title,:imageurl, :drama_length, :date, :genre, :star_cast, :description, :director, :writer, :music, :avg_rating, :drama_language)
 select_dramas=CALL drama_data() 
 delete_dramas=DELETE FROM DRAMAS WHERE id= :id
 delete_dramas_title=DELETE FROM DRAMAS WHERE title= :title
@@ -48,8 +51,6 @@ select_auditoriums=SELECT * FROM auditoriums
 select_dramabyauditorium=select dramas.id as dramasId, title,imageurl, drama_length, date, genre, star_cast, description, director, writer, music, avg_rating, auditoriums.id as auditoriumsId, auditorium_name from dramas join dramas_auditoriums on dramas.id = dramas_auditoriums.dramas_id join auditoriums on dramas_auditoriums.auditoriums_id = auditoriums.id where auditoriums.auditorium_name= :auditorium_name
 select_dramasauditoriums_all=select dramas.id as dramasId,title,imageurl, drama_length, date, genre, star_cast, description, director, writer, music, avg_rating, auditoriums.id as auditoriumsId, auditorium_name  from dramas join dramas_auditoriums on dramas.id = dramas_auditoriums.dramas_id join auditoriums on dramas_auditoriums.auditoriums_id = auditoriums.id 
 select_auditorium_id_byname=select id from auditoriums where auditorium_name =:auditorium_name
-
-
 select_new_name_id_auditorium_by_dramaId=select auditorium_name, auditoriums.id,dramas_auditoriums.date,dramas_auditoriums.time from auditoriums join dramas_auditoriums on auditoriums.id= dramas_auditoriums.auditoriums_id where dramas_auditoriums.dramas_id=:dramas_id and dramas_auditoriums.date=:date
 select_new_audi_price_time=select distinct auditoriums_price.auditoriums_id, auditoriums_price.price, auditoriums_price.istart, auditoriums_price.iend from auditoriums_price join dramas_auditoriums on auditoriums_price.auditoriums_id=dramas_auditoriums.auditoriums_id where auditoriums_price.auditoriums_id=:id and auditoriums_price.dramas_id=:dramas_id;
  
@@ -65,7 +66,6 @@ select_users_id_and_dramas_id=select * from ratings where users_id=:users_id and
 update_ratings=update ratings set rating= :rating, rating_date= :rating_date, users_id= :users_id , dramas_id= :dramas_id WHERE id= :id
 select_all_ratings=select id,rating,rating_date,users_id,dramas_id from ratings
 
-
 #NOTIFICATION_QUERIES
 insert_notification=insert into notifications(id,notify,message,userId,dramaId,realname,dramaTitle) values (:id,:notify,:message,:userId,:dramaId,:realname,:dramaTitle)
 select_notification=select id,notify,message,realname,dramaTitle from notifications order by id DESC
@@ -77,10 +77,8 @@ delete_notification_by_id=DELETE FROM notifications WHERE id= :id order by id AS
 insert_rowseat=insert into row_seat(row_num, row_name, seat_num, auditoriums_id) values (:row_num, :row_name, :seat_num, :auditoriums_id)
 
 
-
-
 #DEVICE_QUERIES
-insert_user_devices=insert into devices(id,users_id,deviceToken) values (:id,:users_id,:deviceToken)
+insert_user_devices=insert into devices(users_id,deviceToken) values (:users_id,:deviceToken)
 select_devices_exists=select  count(users_id) from devices join users on devices.users_id=users.id  where users.id =:users_id
 select_all_devices=select * from devices
 update_devices=update devices set deviceToken= :deviceToken  WHERE users_id= :users_id
@@ -92,9 +90,6 @@ insert_booking=insert into booking(id, booking_date, confirmation_no, users_id,d
 delete_booking_by_Id=DELETE FROM booking WHERE id= :id
 select_booking_all=select booking_date, confirmation_no, users_id,dramas_id,auditoriums_id,auditoriums.auditorium_name, price,status ,dramas.title,dramas.date from booking join dramas on  booking.dramas_id=dramas.id join auditoriums on booking.auditoriums_id= auditoriums.id
 select_booking_by_users_id=SELECT * FROM booking join users on booking.users_id=users.id  WHERE users.id = :users_id
-
-
-
 
 #BOOKEDSEATS_QUERIES QUERIES
 insert_bookedseats=insert into booking(id, booking_id, row_seats_id, refer_seat_id) values (:id, :booking_id, :row_seats_id, :refer_seat_id)
