Trying to upload image but still  stuck

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,3 +32,7 @@ exception_userinvalid=Username Invalid
 exception_userempty=User Not Found
 exception_allgroups=Error: Groups retrival issue from database
 
+
+spring.http.multipart.max-file-size=2000KB
+spring.http.multipart.max-request-size=2000KB
+
