Fixes Bookings DTO merge conflict error

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,5 +30,8 @@ response_bookingmempty={"msg":"Booking failed ", "statusCode" : 404}
 #Exception Messages
 exception_userinvalid=Username Invalid
 exception_userempty=User Not Found
-exception_allgroups=Error: Groups retrival issue from database
+exception_allgroups=Group retrival issue from database
+exception_groupduplicate=Group or Subgroup Duplicate Entry found!
+exception_database=Database exception occured
+
 
