--- a/src/main/resources/sql.properties
+++ b/src/main/resources/sql.properties
@@ -11,16 +11,19 @@ select_users_username=SELECT * FROM users WHERE username= :username
 update_users=update users set realname= :realname, phone= :phone, state= :state, city= :city, device= :device, zipcode= :zipcode, address= :address, notification= :notification, enabled= :enabled where username= :username
 update_users_device=update users set device= :device where username= :username
 
-#GROUP_QUERIES 
-select_groups_all=select * from groups
+##GROUP_QUERIES
+##group queries group and dramas
 select_groupname_byuserid=select group_name from groups join users_groups on groups.id = users_groups.groups_id where users_groups.users_id= :users_id
 select_usersbygroups=select users.id as usersId, realname, username, auth_id, phone, provenance, birthdate, enabled, notification, device, address, city, state, zipcode, groups.id as groupsId, group_name from users join users_groups on users.id = users_groups.users_id join groups on users_groups.groups_id = groups.id where groups.group_name= :group_name
 select_usersgroups_all=select users.id as usersId, realname, username, auth_id, phone, provenance, birthdate, enabled, notification, device, address, city, state, zipcode, groups.id as groupsId, group_name, is_subgroup,  parent_id from users join users_groups on users.id = users_groups.users_id join groups on users_groups.groups_id = groups.id
-insert_groups=insert into groups (id, group_name, is_subgroup, parent_id) values (:id, :group_name, is_subgroup, parent_id)
 insert_user_groups=insert into users_groups(users_id, groups_id) values (:users_id, (select id from groups where group_name= :group_name))
-select_id_bygroupname=select id from groups where group_name= :group_name
-select_groups_exists=SELECT count(group_name) FROM groups WHERE group_name= :group_name
 insert_dramas_groups=insert into dramas_groups(dramas_id, groups_id) values (:dramas_id, (select id from groups where group_name= :group_name))
+
+##only group queries
+select_id_bygroupname=select id from groups where group_name= :group_name
+select_groups_all=select * from groups
+#select_groups_exists=SELECT count(group_name) FROM groups WHERE group_name= :group_name
+insert_groups=insert into groups (id, group_name, is_subgroup, parent_id) values (:id, :group_name, is_subgroup, parent_id)
 update_group_byuser=update users inner join users_groups on users_groups.users_id = users.id set users_groups.groups_id = (select id from groups where group_name= :group_name) where users.username= :username
 select_count_groups=select count(*) from groups where parent_id=0
 delete_groups=delete from groups where group_name= :group_name
@@ -100,10 +103,3 @@ select_booking_by_users_id=SELECT * FROM booking join users on booking.users_id=
 insert_bookedseats=insert into booked_seats(id, booking_id, row_seats_id, seat_status) values (:id, :booking_id, :row_seats_id, :seat_status)
 delete_bookedseats_by_Id=DELETE FROM booked_seats WHERE id= :id
 select_booked_seats=select row_seat.row_num,row_seat.seat_num,booking.status from booking join booked_seats on booking.id=booked_seats.booking_id join row_seat on booked_seats.row_seats_id=row_seat.id where booking.auditoriums_id= :auditoriums_id and booking.dramas_id= :dramas_id  and booking.booking_date < now();
-
-
-
-
-
-
-
