--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,4 +38,5 @@ exception_database=Database exception occured
 
 spring.http.multipart.max-file-size=2000KB
 spring.http.multipart.max-request-size=2000KB
+excelView.(class)=com.lognsys.util.ExcelBuilder
 
