small  changes in test data insert

--- a/builds/classes/application.properties
+++ b/builds/classes/application.properties
@@ -9,8 +9,34 @@ notification_filename=file:src/main/webapp/resources/tables/notification.json
 #REST JSON Response Messages
 response_userempty={"msg":"User Not Found", "statusCode" : 404}
 response_userinvalid={"msg": "Username Invalid", "statusCode" : 400}
+response_userexists={"msg": "This Username already exist", statusCode: 406}
+
+
+#REST JSON Response Messages Drama
+response_dramaempty={"msg":"Drama Not Found", "statusCode" : 404}
+response_dramaexists={"msg": "This Drama already exist", statusCode: 406}
+
+#REST JSON Response Messages Auditorium
+response_auditoriumempty={"msg":"Auditorium Not Found", "statusCode" : 404}
+
+#REST JSON Response Messages Rating
+response_ratingsuccess={"msg":"Thank You for Rating....", "statusCode" : 201}
+
+
+#REST JSON Response Messages Booking
+response_bookingmempty={"msg":"Booking failed ", "statusCode" : 404}
 
 
 #Exception Messages
 exception_userinvalid=Username Invalid
 exception_userempty=User Not Found
+exception_allgroups=Group retrival issue from database
+exception_groupduplicate=Group or Subgroup Duplicate Entry found!
+exception_database=Database exception occured
+
+
+
+spring.http.multipart.max-file-size=2000KB
+spring.http.multipart.max-request-size=2000KB
+excelView.(class)=com.lognsys.util.ExcelBuilder
+
