resolved booked seats error

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,6 +26,12 @@ response_ratingsuccess={"msg":"Thank You for Rating....", "statusCode" : 201}
 #REST JSON Response Messages Booking
 response_bookingmempty={"msg":"Booking failed ", "statusCode" : 404}
 
+#REST JSON Response Messages Booking
+check_no_seats_booked={"msg":"Please wait for a while", "statusCode" : 200}
+
+
+#REST JSON Response Messages Booking
+fail_booked_seats={"msg":"fail to find Booked seats ", "statusCode" : 404}
 
 #Exception Messages
 exception_userinvalid=Username Invalid
