--- a/src/main/resources/sql.properties
+++ b/src/main/resources/sql.properties
@@ -58,7 +58,7 @@ select_dramabyauditorium=select dramas.id as dramasId, title,imageurl, drama_len
 select_dramasauditoriums_all=select dramas.id as dramasId,title,imageurl, drama_length, date, genre, star_cast, description, director, writer, music, avg_rating, auditoriums.id as auditoriumsId, auditorium_name  from dramas join dramas_auditoriums on dramas.id = dramas_auditoriums.dramas_id join auditoriums on dramas_auditoriums.auditoriums_id = auditoriums.id 
 select_auditorium_id_byname=select id from auditoriums where auditorium_name =:auditorium_name
 select_new_name_id_auditorium_by_dramaId=select auditorium_name, auditoriums.id,dramas_auditoriums.date,dramas_auditoriums.time from auditoriums join dramas_auditoriums on auditoriums.id= dramas_auditoriums.auditoriums_id where dramas_auditoriums.dramas_id=:dramas_id and dramas_auditoriums.date> now()
-select_new_audi_price_time=select distinct auditoriums_price.auditoriums_id, auditoriums_price.price, auditoriums_price.istart, auditoriums_price.iend from auditoriums_price join dramas_auditoriums on auditoriums_price.auditoriums_id=dramas_auditoriums.auditoriums_id where auditoriums_price.auditoriums_id=:id and auditoriums_price.dramas_id=:dramas_id and dramas_auditoriums.date=:date;
+select_new_audi_price_time=select distinct auditoriums_price.auditoriums_id, auditoriums_price.price, auditoriums_price.istart, auditoriums_price.iend from auditoriums_price join dramas_auditoriums on auditoriums_price.auditoriums_id=dramas_auditoriums.auditoriums_id where auditoriums_price.auditoriums_id=:id and auditoriums_price.dramas_id=:dramas_id and dramas_auditoriums.date=:date order by price asc;
 
  
 #DRAMA_GROUP_QUERIES 
