small  changes in Rest User Controller

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,8 @@ notification_filename=file:src/main/webapp/resources/tables/notification.json
 #REST JSON Response Messages
 response_userempty={"msg":"User Not Found", "statusCode" : 404}
 response_userinvalid={"msg": "Username Invalid", "statusCode" : 400}
+
+response_internalserver={"msg": "Unknown error please contact to support team", "statusCode" : 500}
 response_userexists={"msg": "This Username already exist", statusCode: 406}
 
 
