--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ booking_filename=file:src/main/webapp/resources/tables/booking.json
 notification_filename=file:src/main/webapp/resources/tables/notification.json
 
 #REST JSON Response Messages
-response_userempty={"msg":"User Not Found", "statusCode" : 404}
+exception_notfound={"msg":"User Not Found", "statusCode" : 404}
 response_userinvalid={"msg": "Username Invalid", "statusCode" : 400}
 
 response_internalserver={"msg": "Unknown error please contact to support team", "statusCode" : 500}
@@ -17,6 +17,9 @@ response_userexists={"msg": "This Username already exist", statusCode: 406}
 #REST JSON Response Messages Drama
 response_dramaempty={"msg":"Drama Not Found", "statusCode" : 404}
 response_dramaexists={"msg": "This Drama already exist", statusCode: 406}
+response_checknetworkerror={"msg": "Please check your network connection", statusCode: 400}
+response_servererror={"msg": "Unknown error please contact to customer support team", statusCode: 400}
+
 
 #REST JSON Response Messages Auditorium
 response_auditoriumempty={"msg":"Auditorium Not Found", "statusCode" : 404}
@@ -37,10 +40,11 @@ fail_booked_seats={"msg":"fail to find Booked seats ", "statusCode" : 404}
 
 #Exception Messages
 exception_userinvalid=Username Invalid
-exception_userempty=User Not Found
+exception_notfound=User Not Found
 exception_allgroups=Group retrival issue from database
 exception_groupduplicate=Group or Subgroup Duplicate Entry found!
 exception_database=Database exception occured
+exception_invalid=Invalid request
 
 
 
